<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingLeft="65dp"
        android:paddingRight="65dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/titleHeaderApp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/text_register"/>


        <EditText
            android:id="@+id/inputFirstName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="30sp"
            android:background="#f6f6f6"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="16sp"
            android:hint="@string/input_name"/>

        <EditText
            android:id="@+id/inputLastName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="#f6f6f6"
            android:hint="@string/input_lastname"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/inputNameUser"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="#f6f6f6"
            android:hint="@string/input_nameuser"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/inputMail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="#f6f6f6"
            android:hint="@string/input_email"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/inputRegPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="#f6f6f6"
            android:hint="@string/input_pass"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/inputRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="#f6f6f6"
            android:hint="@string/input_repeatpass"
            android:inputType="textPassword"
            android:textAlignment="center" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#efefef">

            <CheckBox
                android:id="@+id/checkBoxTerminos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_terms" />

            <CheckBox
                android:id="@+id/checkBoxData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/check_data" />
        </RadioGroup>



        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#195A37"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/btn_backregister" />

            <Button
                android:id="@+id/btnReturn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/green_light"
                android:textSize="18sp"
                android:textStyle="normal"
                android:textColor="@color/green_dark"
                android:text="@string/btn_return" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>