<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/titleApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="195dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/inputNameUser"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:background="#EEF4F1"
            android:hint="@string/input_user"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/inputLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#EEF4F1"
            android:textColor="#0A2918"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/input_pass"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:textAlignment="center"
            android:importantForAutofill="no" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/green_dark"
            android:textSize="18sp"
            android:textStyle="normal"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/green_light"
            android:textSize="18sp"
            android:textStyle="normal"
            android:textColor="@color/green_dark"
            android:text="@string/btn_register"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>